# math-plotter

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: app.rs  color.rs  events.rs  graph.rs  main.rs  message.rs  plotter.rs  utilities.rs  vector.rs  view.rs
src/plotter/: builder.rs  element.rs  events.rs  graph.rs  mod.rs  plotter.rs  primitive.rs  render_pipeline.rs  render_state.rs  scene.rs  settings.rs  vector.rs  view.rs
src/plotter/drawable/: bisector.rs  element.rs  graph.rs  mod.rs  point.rs
src/plotter/render_state/: axis.rs  background.rs  graph.rs
src/plotter/render_state/builders/: mod.rs
src/plotter/render_state/helpers/: bind_group_builder.rs  mod.rs  pipeline_builder.rs  render_pass_builder.rs
src/plotter/render_state/shaders/: axis.wgsl  background.wgsl  graph.wgsl
src/plotter/shaders/: render.wgsl
