[package]
name = "math-plotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
rand = "0.8.5"
iced = { version = "0.12.1", features = ["canvas", "debug"] }
math-lib = { git = "https://github.com/MikulasBar/math-lib.git", branch = "feat/fnBehaviour-to-enum" }