[package]
name = "math-plotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.13.1", features = ["debug", "advanced"] }
math-lib = { git = "https://github.com/MikulasBar/math-lib.git"}
glam = "0.29.0"
bytemuck = "1.18.0"
